# AIBookGitHub

./: .gitignore  README.md  contents.html  main.py  pyproject.toml  requirements.txt  test.html  test.ipynb  test.md
Architectures/: diffusion.ipynb
Business/: gartner.md
Components/html/: attention.html
Generative/: other.ipynb  theory.ipynb
Generative/html/: other.html  theory.html
Introduction/: 1 introduction copy.ipynb  1 introduction.ipynb  introduction.html  introduction.ipynb
MCP server/: anthropic.ipynb  main.ipynb
Quantum AI/: qiskit.ipynb  theory.ipynb
Quantum AI/html/: qiskit.html  theory.html
Reinforcement/: detail-q-learning copy 2.ipynb  detail-q-learning copy.ipynb  detail-q-learning.ipynb  games.ipynb  gridworld.ipynb  settings.ipynb  theory-mba.ipynb  theory.ipynb
Reinforcement/html/: detail-q-learning.html  games.html  gridworld.html  settings.html  theory-mba.html  theory.html
Transformer/: 12_transformer_code_russian.ipynb
